# stupid-translate

./: noxfile.py  pyproject.toml
.github/workflows/: pipeline.yaml
hello_api/: app.py  deps.py  redis.py  repo.py
tests/: test_hello_api.py
